# war-of-dots

./: Makefile  README.md  client_profile  constants.py  pyproject.toml  server_profile  simple_socket.py  wod_client.py  wod_server.py
tests/: bench.py  bench2.py  foo_test.py  marching_squares_test.py  server_test.py
